--- a/gjafalisti.css
+++ b/gjafalisti.css
@@ -8,8 +8,37 @@
   src: url('./fonts/Roboto-Light.ttf') format('woff2');
 }
 
+/* html {
+  position: relative;
+} */
+
 body {
   background-color:#66FF99;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  flex-direction: column;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+nav {
+  text-align: center;
+  font-family: Roboto-Regular;
+  font-size: 2rem;
+  margin-bottom: auto;
+  color: crimson;
+}
+
+.navcard {
+  padding: 20px;
+  text-align: center;
+  border-radius: 8px;
+  /* margin: 1rem; */
+  justify-content: flex-end;
 }
 
 h1 {
@@ -31,13 +60,17 @@ h5 {
   text-align: center;
   font-family: Roboto-Light;
   font-size: 1.5rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
 }
 
 p {
   margin-bottom: 0.5rem;
   font-family: Roboto-Light;
   font-weight: bold;
+}
+
+nav li {
+  list-style-type: none;
 }
 
 li {
@@ -56,8 +89,22 @@ li {
   list-style-type: none;
 }
 
+.backtoindex {
+  text-align: center;
+  font-family: Roboto-Light;
+  font-size: 1.25srem;
+  margin-bottom: 0.25rem;
+  margin-top: 4rem;
+  font-weight: bolder;
+}
+
+a {
+  color: crimson;
+  text-decoration: none;
+}
+
 a:link {
-  color:darkred;
+  color:crimson;
   text-decoration: none;
 }
 
@@ -65,9 +112,9 @@ a:hover {
   color: hotpink;
 }
 
-a:visited {
+/* a:visited {
   color: green;
-}
+} */
 
 .cards {
   display: flex;
@@ -89,6 +136,9 @@ a:visited {
   margin: 1rem;
 }
 
+.forvari {
+  text-align: center;
+}
 
 /* Switch to 2 columns on smaller screens */
 @media (max-width: 600px) {
