--- a/gjafalisti.css
+++ b/gjafalisti.css
@@ -89,6 +89,11 @@ p {
 .forvari {
   text-align: center;
   background-color: yellow;
+  border: 2px solid black;
+  justify-content: center;
+  padding: 0;
+  margin: 0 auto;
+  max-width: 50%;
 }
 
 nav li {
@@ -167,6 +172,10 @@ a:hover {
   .cards {
     flex-direction: column; 
     /* align-items: center;  */
+  }
+
+  .card {
+    margin: 0.5rem;
   }
 
   .card-container {
