--- a/gjafalisti.css
+++ b/gjafalisti.css
@@ -61,7 +61,7 @@ h1 {
   text-align: center;
   font-family: Roboto-Regular;
   font-size: 3rem;
-  margin-bottom: auto;
+  margin-bottom: 0.5em;
   color: crimson;
 }
 
