--- a/gjafalisti.css
+++ b/gjafalisti.css
@@ -57,6 +57,11 @@ nav {
   justify-content: flex-end;
 }
 
+.lysingar {
+  font-size: 30px;
+  padding-bottom: 2rem;
+}
+
 h1 {
   text-align: center;
   font-family: Roboto-Regular;
